# task-manager-pet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
core/: cache.py  celery_app.py  celery_tasks.py  config.py  database.py  deps.py  redis_client.py  security.py
models/: task.py  user.py
routers/: tasks.py
schemas/: task.py  user.py
